--- a/pom.xml
+++ b/pom.xml
@@ -80,6 +80,7 @@
     <build>
         <sourceDirectory>${project.basedir}/src/main/kotlin</sourceDirectory>
         <testSourceDirectory>${project.basedir}/src/test/kotlin</testSourceDirectory>
+        <finalName>botling</finalName>
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
