--- a/.travis.yml
+++ b/.travis.yml
@@ -8,17 +8,14 @@ jdk: oraclejdk8
 
 env:
   global:
-    - COMMIT=${TRAVIS_COMMIT::7}
+    - COMMIT=${TRAVIS_COMMIT::8}
 
 after_success:
   - bash <(curl -s https://codecov.io/bash)
   - docker login -e $DOCKER_EMAIL -u $DOCKER_USERNAME -p $DOCKER_PASSWORD
 
-  #TAG
-  - export TAG=`if [ "$TRAVIS_BRANCH" == "master" ]; then echo "latest"; else echo $TRAVIS_BRANCH ; fi`
-
   #DOCKER
-  - export REPO=finnetrolle/botling
+  - export REPO="finnetrolle/botling"
   - export TAG=`if [ "$TRAVIS_BRANCH" == "master" ]; then echo "latest"; else echo $TRAVIS_BRANCH ; fi`
   - docker build -t $REPO:$COMMIT .
   - docker tag $REPO:$COMMIT $REPO:$TAG
