--- a/src/main/resources/bootstrap.properties
+++ b/src/main/resources/bootstrap.properties
@@ -1,2 +1,2 @@
-spring.application.name=botling
-spring.cloud.config.uri=http://localhost:8888
+spring.application.name=${APP_NAME}
+spring.cloud.config.uri=${CONFIG_SERVICE_URL}
