--- a/src/main/resources/bootstrap.properties
+++ b/src/main/resources/bootstrap.properties
@@ -1,6 +1,6 @@
 spring.application.name=botling
 spring.cloud.config.uri=http://config-service:8888
-spring.cloud.config.fail-fast=true
-spring.cloud.config.retry.multiplier=1.5
-spring.cloud.config.retry.initial-interval=2000
-spring.cloud.config.retry.max-interval=10000
+#spring.cloud.config.fail-fast=true
+#spring.cloud.config.retry.multiplier=1.5
+#spring.cloud.config.retry.initial-interval=2000
+#spring.cloud.config.retry.max-interval=10000
